<?xml version="1.0"?>
<package format="2">
  <name>static_frenet</name>
  <version>0.0.0</version>
  <description>The static_frenet package</description>

  <maintainer email="sml@todo.todo">sml</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rs_perception</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>osmmap</depend>

  <export>

  </export>
</package>
