<?xml version="1.0"?>
<package format="2">
  <name>static_frenet</name>
  <version>0.0.0</version>
  <description>The static_frenet package</description>

  <maintainer email="sml@todo.todo">sml</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  <build_depend> dynamic_reconfigure </build_depend>
  <build_depend> message_generation </build_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <exec_depend> dynamic_reconfigure </exec_depend>
  <depend>message_runtime</depend>

  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rs_perception</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>

  <export>

  </export>
</package>
